--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".home.Impl.HomeActivity">
+        <activity android:name=".views.home.Impl.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
