--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".views.home.Impl.HomeActivity">
+        <activity android:name=".views.home.Impl.HomeActivity" />
+        <activity android:name=".views.login.Impl.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
